--- a/Magdalena/style.css
+++ b/Magdalena/style.css
@@ -1,11 +1,15 @@
 * {
     background-color: rgb(4, 4, 4);
-    margin: 10px;
+    margin: 1px;
 }
 
 .body {
     background-color: rgb(45, 45, 40);
     font-size: 100px;
+}
+
+header {
+    border-image-source: none;
 }
 
 .style0 {
